// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`/calculators/savings > endValue > should return right results for monthly monthly 1`] = `
{
  "deposits": "23.000€",
  "diagramData": {
    "CAPITAL_LIST": [
      5150,
      5300,
      5450,
      5600,
      5750,
      5900,
      6050,
      6200,
      6350,
      6500,
      6650,
      6800,
      6950,
      7100,
      7250,
      7400,
      7550,
      7700,
      7850,
      8000,
      8150,
      8300,
      8450,
      8600,
      8750,
      8900,
      9050,
      9200,
      9350,
      9500,
      9650,
      9800,
      9950,
      10100,
      10250,
      10400,
      10550,
      10700,
      10850,
      11000,
      11150,
      11300,
      11450,
      11600,
      11750,
      11900,
      12050,
      12200,
      12350,
      12500,
      12650,
      12800,
      12950,
      13100,
      13250,
      13400,
      13550,
      13700,
      13850,
      14000,
      14150,
      14300,
      14450,
      14600,
      14750,
      14900,
      15050,
      15200,
      15350,
      15500,
      15650,
      15800,
      15950,
      16100,
      16250,
      16400,
      16550,
      16700,
      16850,
      17000,
      17150,
      17300,
      17450,
      17600,
      17750,
      17900,
      18050,
      18200,
      18350,
      18500,
      18650,
      18800,
      18950,
      19100,
      19250,
      19400,
      19550,
      19700,
      19850,
      20000,
      20150,
      20300,
      20450,
      20600,
      20750,
      20900,
      21050,
      21200,
      21350,
      21500,
      21650,
      21800,
      21950,
      22100,
      22250,
      22400,
      22550,
      22700,
      22850,
      23000,
    ],
    "INTEREST_LIST": [
      4.99,
      10.14,
      15.43,
      20.88,
      26.48,
      32.22,
      38.12,
      44.17,
      50.37,
      56.72,
      63.23,
      69.88,
      76.69,
      83.65,
      90.76,
      98.03,
      105.45,
      113.01,
      120.74,
      128.61,
      136.64,
      144.82,
      153.16,
      161.65,
      170.29,
      179.08,
      188.03,
      197.14,
      206.4,
      215.81,
      225.38,
      235.1,
      244.98,
      255.01,
      265.19,
      275.54,
      286.04,
      296.69,
      307.5,
      318.47,
      329.59,
      340.87,
      352.3,
      363.89,
      375.64,
      387.54,
      399.6,
      411.82,
      424.2,
      436.73,
      449.42,
      462.27,
      475.28,
      488.44,
      501.77,
      515.25,
      528.89,
      542.69,
      556.65,
      570.76,
      585.04,
      599.47,
      614.07,
      628.82,
      643.74,
      658.81,
      674.04,
      689.44,
      704.99,
      720.71,
      736.58,
      752.62,
      768.82,
      785.18,
      801.7,
      818.38,
      835.22,
      852.23,
      869.39,
      886.72,
      904.21,
      921.87,
      939.68,
      957.66,
      975.8,
      994.11,
      1012.58,
      1031.21,
      1050,
      1068.96,
      1088.09,
      1107.37,
      1126.82,
      1146.44,
      1166.22,
      1186.16,
      1206.27,
      1226.55,
      1246.99,
      1267.59,
      1288.36,
      1309.3,
      1330.4,
      1351.66,
      1373.1,
      1394.7,
      1416.46,
      1438.4,
      1460.5,
      1482.76,
      1505.19,
      1527.8,
      1550.56,
      1573.5,
      1596.6,
      1619.87,
      1643.31,
      1666.92,
      1690.7,
      1714.64,
    ],
    "LAST_CAPITAL": "23.000€",
    "LAST_INTEREST": "1.714,64€",
    "TOTAL_CAPITAL": "24.714,64€",
  },
  "endValue": "24.714,64€",
  "interestAfterTax": "1.714,64€",
  "monthlyDuration": "120,00",
  "savingRate": "150€",
  "startCapital": "5.000€",
  "yearlyDuration": "10,00",
  "yearlyInterest": "1,50%",
}
`;

exports[`/calculators/savings > endValue > should return right results for monthly monthly without start capital 1`] = `
{
  "deposits": "12.000€",
  "diagramData": {
    "CAPITAL_LIST": [
      100,
      200,
      300,
      400,
      500,
      600,
      700,
      800,
      900,
      1000,
      1100,
      1200,
      1300,
      1400,
      1500,
      1600,
      1700,
      1800,
      1900,
      2000,
      2100,
      2200,
      2300,
      2400,
      2500,
      2600,
      2700,
      2800,
      2900,
      3000,
      3100,
      3200,
      3300,
      3400,
      3500,
      3600,
      3700,
      3800,
      3900,
      4000,
      4100,
      4200,
      4300,
      4400,
      4500,
      4600,
      4700,
      4800,
      4900,
      5000,
      5100,
      5200,
      5300,
      5400,
      5500,
      5600,
      5700,
      5800,
      5900,
      6000,
      6100,
      6200,
      6300,
      6400,
      6500,
      6600,
      6700,
      6800,
      6900,
      7000,
      7100,
      7200,
      7300,
      7400,
      7500,
      7600,
      7700,
      7800,
      7900,
      8000,
      8100,
      8200,
      8300,
      8400,
      8500,
      8600,
      8700,
      8800,
      8900,
      9000,
      9100,
      9200,
      9300,
      9400,
      9500,
      9600,
      9700,
      9800,
      9900,
      10000,
      10100,
      10200,
      10300,
      10400,
      10500,
      10600,
      10700,
      10800,
      10900,
      11000,
      11100,
      11200,
      11300,
      11400,
      11500,
      11600,
      11700,
      11800,
      11900,
      12000,
    ],
    "INTEREST_LIST": [
      0.42,
      1.25,
      2.51,
      4.18,
      6.29,
      8.81,
      11.76,
      15.15,
      18.96,
      23.21,
      27.89,
      33,
      38.56,
      44.55,
      50.99,
      57.86,
      65.19,
      72.96,
      81.18,
      89.85,
      98.98,
      108.56,
      118.59,
      129.09,
      140.04,
      151.46,
      163.34,
      175.69,
      188.5,
      201.79,
      215.54,
      229.77,
      244.48,
      259.67,
      275.33,
      291.48,
      308.11,
      325.23,
      342.83,
      360.93,
      379.51,
      398.59,
      418.17,
      438.25,
      458.82,
      479.9,
      501.48,
      523.57,
      546.17,
      569.28,
      592.9,
      617.04,
      641.69,
      666.87,
      692.56,
      718.78,
      745.53,
      772.8,
      800.6,
      828.94,
      857.81,
      887.22,
      917.17,
      947.65,
      978.69,
      1010.26,
      1042.39,
      1075.07,
      1108.3,
      1142.08,
      1176.42,
      1211.32,
      1246.79,
      1282.82,
      1319.41,
      1356.58,
      1394.31,
      1432.62,
      1471.51,
      1510.97,
      1551.02,
      1591.65,
      1632.86,
      1674.67,
      1717.06,
      1760.05,
      1803.63,
      1847.81,
      1892.6,
      1937.98,
      1983.98,
      2030.58,
      2077.79,
      2125.61,
      2174.05,
      2223.11,
      2272.79,
      2323.09,
      2374.02,
      2425.58,
      2477.77,
      2530.59,
      2584.06,
      2638.16,
      2692.9,
      2748.28,
      2804.32,
      2861,
      2918.34,
      2976.34,
      3034.99,
      3094.3,
      3154.27,
      3214.92,
      3276.23,
      3338.21,
      3400.87,
      3464.21,
      3528.23,
      3592.93,
    ],
    "LAST_CAPITAL": "12.000€",
    "LAST_INTEREST": "3.592,93€",
    "TOTAL_CAPITAL": "15.592,93€",
  },
  "endValue": "15.592,93€",
  "interestAfterTax": "3.592,93€",
  "monthlyDuration": "120,00",
  "savingRate": "100€",
  "startCapital": "0€",
  "yearlyDuration": "10,00",
  "yearlyInterest": "5,00%",
}
`;

exports[`/calculators/savings > endValue > should return right results for monthly yearly 1`] = `
{
  "deposits": "23.000€",
  "diagramData": {
    "CAPITAL_LIST": [
      5150,
      5300,
      5450,
      5600,
      5750,
      5900,
      6050,
      6200,
      6350,
      6500,
      6650,
      6800,
      6950,
      7100,
      7250,
      7400,
      7550,
      7700,
      7850,
      8000,
      8150,
      8300,
      8450,
      8600,
      8750,
      8900,
      9050,
      9200,
      9350,
      9500,
      9650,
      9800,
      9950,
      10100,
      10250,
      10400,
      10550,
      10700,
      10850,
      11000,
      11150,
      11300,
      11450,
      11600,
      11750,
      11900,
      12050,
      12200,
      12350,
      12500,
      12650,
      12800,
      12950,
      13100,
      13250,
      13400,
      13550,
      13700,
      13850,
      14000,
      14150,
      14300,
      14450,
      14600,
      14750,
      14900,
      15050,
      15200,
      15350,
      15500,
      15650,
      15800,
      15950,
      16100,
      16250,
      16400,
      16550,
      16700,
      16850,
      17000,
      17150,
      17300,
      17450,
      17600,
      17750,
      17900,
      18050,
      18200,
      18350,
      18500,
      18650,
      18800,
      18950,
      19100,
      19250,
      19400,
      19550,
      19700,
      19850,
      20000,
      20150,
      20300,
      20450,
      20600,
      20750,
      20900,
      21050,
      21200,
      21350,
      21500,
      21650,
      21800,
      21950,
      22100,
      22250,
      22400,
      22550,
      22700,
      22850,
      23000,
    ],
    "INTEREST_LIST": [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      89.63,
      89.63,
      89.63,
      89.63,
      89.63,
      89.63,
      89.63,
      89.63,
      89.63,
      89.63,
      89.63,
      89.63,
      207.59,
      207.59,
      207.59,
      207.59,
      207.59,
      207.59,
      207.59,
      207.59,
      207.59,
      207.59,
      207.59,
      207.59,
      354.33,
      354.33,
      354.33,
      354.33,
      354.33,
      354.33,
      354.33,
      354.33,
      354.33,
      354.33,
      354.33,
      354.33,
      530.27,
      530.27,
      530.27,
      530.27,
      530.27,
      530.27,
      530.27,
      530.27,
      530.27,
      530.27,
      530.27,
      530.27,
      735.85,
      735.85,
      735.85,
      735.85,
      735.85,
      735.85,
      735.85,
      735.85,
      735.85,
      735.85,
      735.85,
      735.85,
      971.52,
      971.52,
      971.52,
      971.52,
      971.52,
      971.52,
      971.52,
      971.52,
      971.52,
      971.52,
      971.52,
      971.52,
      1237.71,
      1237.71,
      1237.71,
      1237.71,
      1237.71,
      1237.71,
      1237.71,
      1237.71,
      1237.71,
      1237.71,
      1237.71,
      1237.71,
      1534.9,
      1534.9,
      1534.9,
      1534.9,
      1534.9,
      1534.9,
      1534.9,
      1534.9,
      1534.9,
      1534.9,
      1534.9,
      1534.9,
      1863.55,
      1863.55,
      1863.55,
      1863.55,
      1863.55,
      1863.55,
      1863.55,
      1863.55,
      1863.55,
      1863.55,
      1863.55,
      1863.55,
      2224.13,
    ],
    "LAST_CAPITAL": "23.000€",
    "LAST_INTEREST": "2.224,13€",
    "TOTAL_CAPITAL": "25.224,13€",
  },
  "endValue": "25.224,13€",
  "interestAfterTax": "2.224,13€",
  "monthlyDuration": "120,00",
  "savingRate": "150€",
  "startCapital": "5.000€",
  "yearlyDuration": "10,00",
  "yearlyInterest": "1,50%",
}
`;

exports[`/calculators/savings > endValue > should return right results for yearly yearly 1`] = `
{
  "deposits": "23.000€",
  "diagramData": {
    "CAPITAL_LIST": [
      6800,
      6800,
      6800,
      6800,
      6800,
      6800,
      6800,
      6800,
      6800,
      6800,
      6800,
      6800,
      8600,
      8600,
      8600,
      8600,
      8600,
      8600,
      8600,
      8600,
      8600,
      8600,
      8600,
      8600,
      10400,
      10400,
      10400,
      10400,
      10400,
      10400,
      10400,
      10400,
      10400,
      10400,
      10400,
      10400,
      12200,
      12200,
      12200,
      12200,
      12200,
      12200,
      12200,
      12200,
      12200,
      12200,
      12200,
      12200,
      14000,
      14000,
      14000,
      14000,
      14000,
      14000,
      14000,
      14000,
      14000,
      14000,
      14000,
      14000,
      15800,
      15800,
      15800,
      15800,
      15800,
      15800,
      15800,
      15800,
      15800,
      15800,
      15800,
      15800,
      17600,
      17600,
      17600,
      17600,
      17600,
      17600,
      17600,
      17600,
      17600,
      17600,
      17600,
      17600,
      19400,
      19400,
      19400,
      19400,
      19400,
      19400,
      19400,
      19400,
      19400,
      19400,
      19400,
      19400,
      21200,
      21200,
      21200,
      21200,
      21200,
      21200,
      21200,
      21200,
      21200,
      21200,
      21200,
      21200,
      23000,
      23000,
      23000,
      23000,
      23000,
      23000,
      23000,
      23000,
      23000,
      23000,
      23000,
      23000,
    ],
    "INTEREST_LIST": [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      83.17,
      83.17,
      83.17,
      83.17,
      83.17,
      83.17,
      83.17,
      83.17,
      83.17,
      83.17,
      83.17,
      83.17,
      189.37,
      189.37,
      189.37,
      189.37,
      189.37,
      189.37,
      189.37,
      189.37,
      189.37,
      189.37,
      189.37,
      189.37,
      318.88,
      318.88,
      318.88,
      318.88,
      318.88,
      318.88,
      318.88,
      318.88,
      318.88,
      318.88,
      318.88,
      318.88,
      472,
      472,
      472,
      472,
      472,
      472,
      472,
      472,
      472,
      472,
      472,
      472,
      649,
      649,
      649,
      649,
      649,
      649,
      649,
      649,
      649,
      649,
      649,
      649,
      850.18,
      850.18,
      850.18,
      850.18,
      850.18,
      850.18,
      850.18,
      850.18,
      850.18,
      850.18,
      850.18,
      850.18,
      1075.84,
      1075.84,
      1075.84,
      1075.84,
      1075.84,
      1075.84,
      1075.84,
      1075.84,
      1075.84,
      1075.84,
      1075.84,
      1075.84,
      1326.27,
      1326.27,
      1326.27,
      1326.27,
      1326.27,
      1326.27,
      1326.27,
      1326.27,
      1326.27,
      1326.27,
      1326.27,
      1326.27,
      1601.78,
      1601.78,
      1601.78,
      1601.78,
      1601.78,
      1601.78,
      1601.78,
      1601.78,
      1601.78,
      1601.78,
      1601.78,
      1601.78,
      1902.68,
    ],
    "LAST_CAPITAL": "23.000€",
    "LAST_INTEREST": "1.902,68€",
    "TOTAL_CAPITAL": "24.902,68€",
  },
  "endValue": "24.902,68€",
  "interestAfterTax": "1.902,68€",
  "monthlyDuration": "120,00",
  "savingRate": "1.800€",
  "startCapital": "5.000€",
  "yearlyDuration": "10,00",
  "yearlyInterest": "1,50%",
}
`;

exports[`/calculators/savings > monthlyDuration > should return right results for monthly monthly 1`] = `
{
  "deposits": "17.447,99€",
  "diagramData": {
    "CAPITAL_LIST": [
      5150,
      5300,
      5450,
      5600,
      5750,
      5900,
      6050,
      6200,
      6350,
      6500,
      6650,
      6800,
      6950,
      7100,
      7250,
      7400,
      7550,
      7700,
      7850,
      8000,
      8150,
      8300,
      8450,
      8600,
      8750,
      8900,
      9050,
      9200,
      9350,
      9500,
      9650,
      9800,
      9950,
      10100,
      10250,
      10400,
      10550,
      10700,
      10850,
      11000,
      11150,
      11300,
      11450,
      11600,
      11750,
      11900,
      12050,
      12200,
      12350,
      12500,
      12650,
      12800,
      12950,
      13100,
      13250,
      13400,
      13550,
      13700,
      13850,
      14000,
      14150,
      14300,
      14450,
      14600,
      14750,
      14900,
      15050,
      15200,
      15350,
      15500,
      15650,
      15800,
      15950,
      16100,
      16250,
      16400,
      16550,
      16700,
      16850,
      17000,
      17150,
      17300,
    ],
    "INTEREST_LIST": [
      12.88,
      26.16,
      39.85,
      53.95,
      68.46,
      83.38,
      98.71,
      114.46,
      130.62,
      147.2,
      164.19,
      181.6,
      199.43,
      217.68,
      236.35,
      255.44,
      274.95,
      294.89,
      315.25,
      336.04,
      357.25,
      378.9,
      400.97,
      423.47,
      446.4,
      469.77,
      493.57,
      517.8,
      542.47,
      567.58,
      593.12,
      619.11,
      645.53,
      672.39,
      699.7,
      727.45,
      755.64,
      784.28,
      813.37,
      842.9,
      872.88,
      903.31,
      934.2,
      965.53,
      997.32,
      1029.56,
      1062.26,
      1095.42,
      1129.03,
      1163.11,
      1197.64,
      1232.63,
      1268.09,
      1304.01,
      1340.4,
      1377.25,
      1414.56,
      1452.35,
      1490.61,
      1529.33,
      1568.53,
      1608.2,
      1648.35,
      1688.97,
      1730.07,
      1771.64,
      1813.7,
      1856.23,
      1899.25,
      1942.74,
      1986.73,
      2031.19,
      2076.15,
      2121.59,
      2167.51,
      2213.93,
      2260.84,
      2308.25,
      2356.14,
      2404.53,
      2453.42,
      2502.8,
    ],
    "LAST_CAPITAL": "17.300€",
    "LAST_INTEREST": "2.502,80€",
    "TOTAL_CAPITAL": "19.802,80€",
  },
  "endValue": "20.000€",
  "interestAfterTax": "2.552,01€",
  "monthlyDuration": "82,99",
  "savingRate": "150€",
  "startCapital": "5.000€",
  "yearlyDuration": "6,92",
  "yearlyInterest": "3,00%",
}
`;

exports[`/calculators/savings > monthlyDuration > should return right results for monthly yearly 1`] = `
{
  "deposits": "17.864,67€",
  "diagramData": {
    "CAPITAL_LIST": [
      5150,
      5300,
      5450,
      5600,
      5750,
      5900,
      6050,
      6200,
      6350,
      6500,
      6650,
      6800,
      6950,
      7100,
      7250,
      7400,
      7550,
      7700,
      7850,
      8000,
      8150,
      8300,
      8450,
      8600,
      8750,
      8900,
      9050,
      9200,
      9350,
      9500,
      9650,
      9800,
      9950,
      10100,
      10250,
      10400,
      10550,
      10700,
      10850,
      11000,
      11150,
      11300,
      11450,
      11600,
      11750,
      11900,
      12050,
      12200,
      12350,
      12500,
      12650,
      12800,
      12950,
      13100,
      13250,
      13400,
      13550,
      13700,
      13850,
      14000,
      14150,
      14300,
      14450,
      14600,
      14750,
      14900,
      15050,
      15200,
      15350,
      15500,
      15650,
      15800,
      15950,
      16100,
      16250,
      16400,
      16550,
      16700,
      16850,
      17000,
      17150,
      17300,
      17450,
      17600,
      17750,
    ],
    "INTEREST_LIST": [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      146.16,
      146.16,
      146.16,
      146.16,
      146.16,
      146.16,
      146.16,
      146.16,
      146.16,
      146.16,
      146.16,
      146.16,
      339.92,
      339.92,
      339.92,
      339.92,
      339.92,
      339.92,
      339.92,
      339.92,
      339.92,
      339.92,
      339.92,
      339.92,
      582.45,
      582.45,
      582.45,
      582.45,
      582.45,
      582.45,
      582.45,
      582.45,
      582.45,
      582.45,
      582.45,
      582.45,
      874.94,
      874.94,
      874.94,
      874.94,
      874.94,
      874.94,
      874.94,
      874.94,
      874.94,
      874.94,
      874.94,
      874.94,
      1218.62,
      1218.62,
      1218.62,
      1218.62,
      1218.62,
      1218.62,
      1218.62,
      1218.62,
      1218.62,
      1218.62,
      1218.62,
      1218.62,
      1614.74,
      1614.74,
      1614.74,
      1614.74,
      1614.74,
      1614.74,
      1614.74,
      1614.74,
      1614.74,
      1614.74,
      1614.74,
      1614.74,
      2064.57,
      2064.57,
    ],
    "LAST_CAPITAL": "17.750€",
    "LAST_INTEREST": "2.064,57€",
    "TOTAL_CAPITAL": "19.814,57€",
  },
  "endValue": "20.000€",
  "interestAfterTax": "2.135,33€",
  "monthlyDuration": "85,76",
  "savingRate": "150€",
  "startCapital": "5.000€",
  "yearlyDuration": "7,15",
  "yearlyInterest": "3,00%",
}
`;

exports[`/calculators/savings > monthlyDuration > should return right results for yearly yearly 1`] = `
{
  "deposits": "17.743,32€",
  "diagramData": {
    "CAPITAL_LIST": [
      6800,
      6800,
      6800,
      6800,
      6800,
      6800,
      6800,
      6800,
      6800,
      6800,
      6800,
      6800,
      8600,
      8600,
      8600,
      8600,
      8600,
      8600,
      8600,
      8600,
      8600,
      8600,
      8600,
      8600,
      10400,
      10400,
      10400,
      10400,
      10400,
      10400,
      10400,
      10400,
      10400,
      10400,
      10400,
      10400,
      12200,
      12200,
      12200,
      12200,
      12200,
      12200,
      12200,
      12200,
      12200,
      12200,
      12200,
      12200,
      14000,
      14000,
      14000,
      14000,
      14000,
      14000,
      14000,
      14000,
      14000,
      14000,
      14000,
      14000,
      15800,
      15800,
      15800,
      15800,
      15800,
      15800,
      15800,
      15800,
      15800,
      15800,
      15800,
      15800,
      17600,
      17600,
      17600,
      17600,
      17600,
      17600,
      17600,
      17600,
      17600,
      17600,
      17600,
      17600,
    ],
    "INTEREST_LIST": [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      166.34,
      166.34,
      166.34,
      166.34,
      166.34,
      166.34,
      166.34,
      166.34,
      166.34,
      166.34,
      166.34,
      166.34,
      380.77,
      380.77,
      380.77,
      380.77,
      380.77,
      380.77,
      380.77,
      380.77,
      380.77,
      380.77,
      380.77,
      380.77,
      644.48,
      644.48,
      644.48,
      644.48,
      644.48,
      644.48,
      644.48,
      644.48,
      644.48,
      644.48,
      644.48,
      644.48,
      958.68,
      958.68,
      958.68,
      958.68,
      958.68,
      958.68,
      958.68,
      958.68,
      958.68,
      958.68,
      958.68,
      958.68,
      1324.58,
      1324.58,
      1324.58,
      1324.58,
      1324.58,
      1324.58,
      1324.58,
      1324.58,
      1324.58,
      1324.58,
      1324.58,
      1324.58,
      1743.47,
      1743.47,
      1743.47,
      1743.47,
      1743.47,
      1743.47,
      1743.47,
      1743.47,
      1743.47,
      1743.47,
      1743.47,
      1743.47,
      2216.64,
    ],
    "LAST_CAPITAL": "17.600€",
    "LAST_INTEREST": "2.216,64€",
    "TOTAL_CAPITAL": "19.816,64€",
  },
  "endValue": "20.000€",
  "interestAfterTax": "2.256,68€",
  "monthlyDuration": "84,96",
  "savingRate": "1.800€",
  "startCapital": "5.000€",
  "yearlyDuration": "7,08",
  "yearlyInterest": "3,00%",
}
`;

exports[`/calculators/savings > savingRate > should return right results for accumulating 1`] = `
{
  "deposits": "9.364,50€",
  "diagramData": {
    "CAPITAL_LIST": [
      5623.5,
      5623.5,
      5623.5,
      5623.5,
      5623.5,
      5623.5,
      5623.5,
      5623.5,
      5623.5,
      5623.5,
      5623.5,
      5623.5,
      6247,
      6247,
      6247,
      6247,
      6247,
      6247,
      6247,
      6247,
      6247,
      6247,
      6247,
      6247,
      6870.5,
      6870.5,
      6870.5,
      6870.5,
      6870.5,
      6870.5,
      6870.5,
      6870.5,
      6870.5,
      6870.5,
      6870.5,
      6870.5,
      7494,
      7494,
      7494,
      7494,
      7494,
      7494,
      7494,
      7494,
      7494,
      7494,
      7494,
      7494,
      8117.5,
      8117.5,
      8117.5,
      8117.5,
      8117.5,
      8117.5,
      8117.5,
      8117.5,
      8117.5,
      8117.5,
      8117.5,
      8117.5,
      8741,
      8741,
      8741,
      8741,
      8741,
      8741,
      8741,
      8741,
      8741,
      8741,
      8741,
      8741,
      9364.5,
      9364.5,
      9364.5,
      9364.5,
      9364.5,
      9364.5,
      9364.5,
      9364.5,
      9364.5,
      9364.5,
      9364.5,
      9364.5,
    ],
    "INTEREST_LIST": [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      84.35,
      84.35,
      84.35,
      84.35,
      84.35,
      84.35,
      84.35,
      84.35,
      84.35,
      84.35,
      84.35,
      84.35,
      179.32,
      179.32,
      179.32,
      179.32,
      179.32,
      179.32,
      179.32,
      179.32,
      179.32,
      179.32,
      179.32,
      179.32,
      285.07,
      285.07,
      285.07,
      285.07,
      285.07,
      285.07,
      285.07,
      285.07,
      285.07,
      285.07,
      285.07,
      285.07,
      401.76,
      401.76,
      401.76,
      401.76,
      401.76,
      401.76,
      401.76,
      401.76,
      401.76,
      401.76,
      401.76,
      401.76,
      529.54,
      529.54,
      529.54,
      529.54,
      529.54,
      529.54,
      529.54,
      529.54,
      529.54,
      529.54,
      529.54,
      529.54,
      668.6,
      668.6,
      668.6,
      668.6,
      668.6,
      668.6,
      668.6,
      668.6,
      668.6,
      668.6,
      668.6,
      668.6,
      635.468,
    ],
    "LAST_CAPITAL": "9.364,50€",
    "LAST_INTEREST": "635,47€",
    "TOTAL_CAPITAL": "9.999,97€",
  },
  "endValue": "10.000€",
  "interestAfterTax": "635,50€",
  "monthlyDuration": "84,00",
  "savingRate": "623,50€",
  "startCapital": "5.000€",
  "yearlyDuration": "7,00",
  "yearlyInterest": "1,50%",
}
`;

exports[`/calculators/savings > savingRate > should return right results for monthly monthly 1`] = `
{
  "deposits": "9.358,76€",
  "diagramData": {
    "CAPITAL_LIST": [
      5051.89,
      5103.78,
      5155.67,
      5207.56,
      5259.45,
      5311.34,
      5363.23,
      5415.12,
      5467.01,
      5518.9,
      5570.79,
      5622.68,
      5674.57,
      5726.46,
      5778.35,
      5830.24,
      5882.13,
      5934.02,
      5985.91,
      6037.8,
      6089.69,
      6141.58,
      6193.47,
      6245.36,
      6297.25,
      6349.14,
      6401.03,
      6452.92,
      6504.81,
      6556.7,
      6608.59,
      6660.48,
      6712.37,
      6764.26,
      6816.15,
      6868.04,
      6919.93,
      6971.82,
      7023.71,
      7075.6,
      7127.49,
      7179.38,
      7231.27,
      7283.16,
      7335.05,
      7386.94,
      7438.83,
      7490.72,
      7542.61,
      7594.5,
      7646.39,
      7698.28,
      7750.17,
      7802.06,
      7853.95,
      7905.84,
      7957.73,
      8009.62,
      8061.51,
      8113.4,
      8165.29,
      8217.18,
      8269.07,
      8320.96,
      8372.85,
      8424.74,
      8476.63,
      8528.52,
      8580.41,
      8632.3,
      8684.19,
      8736.08,
      8787.97,
      8839.86,
      8891.75,
      8943.64,
      8995.53,
      9047.42,
      9099.31,
      9151.2,
      9203.09,
      9254.98,
      9306.87,
      9358.76,
    ],
    "INTEREST_LIST": [
      5.15,
      10.36,
      15.62,
      20.95,
      26.33,
      31.77,
      37.27,
      42.82,
      48.44,
      54.11,
      59.85,
      65.64,
      71.49,
      77.4,
      83.37,
      89.39,
      95.48,
      101.62,
      107.83,
      114.09,
      120.42,
      126.8,
      133.24,
      139.74,
      146.3,
      152.92,
      159.6,
      166.34,
      173.14,
      180,
      186.92,
      193.9,
      200.94,
      208.04,
      215.2,
      222.41,
      229.69,
      237.03,
      244.43,
      251.9,
      259.42,
      267,
      274.64,
      282.34,
      290.11,
      297.93,
      305.82,
      313.76,
      321.77,
      329.84,
      337.97,
      346.16,
      354.41,
      362.72,
      371.1,
      379.54,
      388.03,
      396.59,
      405.21,
      413.89,
      422.64,
      431.44,
      440.31,
      449.24,
      458.23,
      467.29,
      476.4,
      485.58,
      494.82,
      504.13,
      513.49,
      522.92,
      532.41,
      541.96,
      551.57,
      561.25,
      570.99,
      580.8,
      590.66,
      600.59,
      610.58,
      620.64,
      630.76,
      640.94,
    ],
    "LAST_CAPITAL": "9.358,76€",
    "LAST_INTEREST": "640,94€",
    "TOTAL_CAPITAL": "9.999,70€",
  },
  "endValue": "10.000€",
  "interestAfterTax": "641,24€",
  "monthlyDuration": "84,00",
  "savingRate": "51,89€",
  "startCapital": "5.000€",
  "yearlyDuration": "7,00",
  "yearlyInterest": "1,50%",
}
`;

exports[`/calculators/savings > savingRate > should return right results for monthly yearly 1`] = `
{
  "deposits": "9.393,20€",
  "diagramData": {
    "CAPITAL_LIST": [
      5052.3,
      5104.6,
      5156.9,
      5209.2,
      5261.5,
      5313.8,
      5366.1,
      5418.4,
      5470.7,
      5523,
      5575.3,
      5627.6,
      5679.9,
      5732.2,
      5784.5,
      5836.8,
      5889.1,
      5941.4,
      5993.7,
      6046,
      6098.3,
      6150.6,
      6202.9,
      6255.2,
      6307.5,
      6359.8,
      6412.1,
      6464.4,
      6516.7,
      6569,
      6621.3,
      6673.6,
      6725.9,
      6778.2,
      6830.5,
      6882.8,
      6935.1,
      6987.4,
      7039.7,
      7092,
      7144.3,
      7196.6,
      7248.9,
      7301.2,
      7353.5,
      7405.8,
      7458.1,
      7510.4,
      7562.7,
      7615,
      7667.3,
      7719.6,
      7771.9,
      7824.2,
      7876.5,
      7928.8,
      7981.1,
      8033.4,
      8085.7,
      8138,
      8190.3,
      8242.6,
      8294.9,
      8347.2,
      8399.5,
      8451.8,
      8504.1,
      8556.4,
      8608.7,
      8661,
      8713.3,
      8765.6,
      8817.9,
      8870.2,
      8922.5,
      8974.8,
      9027.1,
      9079.4,
      9131.7,
      9184,
      9236.3,
      9288.6,
      9340.9,
      9393.2,
    ],
    "INTEREST_LIST": [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      62.14,
      62.14,
      62.14,
      62.14,
      62.14,
      62.14,
      62.14,
      62.14,
      62.14,
      62.14,
      62.14,
      62.14,
      132.31,
      132.31,
      132.31,
      132.31,
      132.31,
      132.31,
      132.31,
      132.31,
      132.31,
      132.31,
      132.31,
      132.31,
      210.6,
      210.6,
      210.6,
      210.6,
      210.6,
      210.6,
      210.6,
      210.6,
      210.6,
      210.6,
      210.6,
      210.6,
      297.1,
      297.1,
      297.1,
      297.1,
      297.1,
      297.1,
      297.1,
      297.1,
      297.1,
      297.1,
      297.1,
      297.1,
      391.92,
      391.92,
      391.92,
      391.92,
      391.92,
      391.92,
      391.92,
      391.92,
      391.92,
      391.92,
      391.92,
      391.92,
      495.14,
      495.14,
      495.14,
      495.14,
      495.14,
      495.14,
      495.14,
      495.14,
      495.14,
      495.14,
      495.14,
      495.14,
      606.86,
    ],
    "LAST_CAPITAL": "9.393,20€",
    "LAST_INTEREST": "606,86€",
    "TOTAL_CAPITAL": "10.000,06€",
  },
  "endValue": "10.000€",
  "interestAfterTax": "606,80€",
  "monthlyDuration": "84,00",
  "savingRate": "52,30€",
  "startCapital": "5.000€",
  "yearlyDuration": "7,00",
  "yearlyInterest": "1,50%",
}
`;

exports[`/calculators/savings > savingRate > should return right results for yearly yearly 1`] = `
{
  "deposits": "9.191,60€",
  "diagramData": {
    "CAPITAL_LIST": [
      5598.8,
      5598.8,
      5598.8,
      5598.8,
      5598.8,
      5598.8,
      5598.8,
      5598.8,
      5598.8,
      5598.8,
      5598.8,
      5598.8,
      6197.6,
      6197.6,
      6197.6,
      6197.6,
      6197.6,
      6197.6,
      6197.6,
      6197.6,
      6197.6,
      6197.6,
      6197.6,
      6197.6,
      6796.4,
      6796.4,
      6796.4,
      6796.4,
      6796.4,
      6796.4,
      6796.4,
      6796.4,
      6796.4,
      6796.4,
      6796.4,
      6796.4,
      7395.2,
      7395.2,
      7395.2,
      7395.2,
      7395.2,
      7395.2,
      7395.2,
      7395.2,
      7395.2,
      7395.2,
      7395.2,
      7395.2,
      7994,
      7994,
      7994,
      7994,
      7994,
      7994,
      7994,
      7994,
      7994,
      7994,
      7994,
      7994,
      8592.8,
      8592.8,
      8592.8,
      8592.8,
      8592.8,
      8592.8,
      8592.8,
      8592.8,
      8592.8,
      8592.8,
      8592.8,
      8592.8,
      9191.6,
      9191.6,
      9191.6,
      9191.6,
      9191.6,
      9191.6,
      9191.6,
      9191.6,
      9191.6,
      9191.6,
      9191.6,
      9191.6,
    ],
    "INTEREST_LIST": [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      83.98,
      83.98,
      83.98,
      83.98,
      83.98,
      83.98,
      83.98,
      83.98,
      83.98,
      83.98,
      83.98,
      83.98,
      178.21,
      178.21,
      178.21,
      178.21,
      178.21,
      178.21,
      178.21,
      178.21,
      178.21,
      178.21,
      178.21,
      178.21,
      282.83,
      282.83,
      282.83,
      282.83,
      282.83,
      282.83,
      282.83,
      282.83,
      282.83,
      282.83,
      282.83,
      282.83,
      398,
      398,
      398,
      398,
      398,
      398,
      398,
      398,
      398,
      398,
      398,
      398,
      523.88,
      523.88,
      523.88,
      523.88,
      523.88,
      523.88,
      523.88,
      523.88,
      523.88,
      523.88,
      523.88,
      523.88,
      660.63,
      660.63,
      660.63,
      660.63,
      660.63,
      660.63,
      660.63,
      660.63,
      660.63,
      660.63,
      660.63,
      660.63,
      808.41,
    ],
    "LAST_CAPITAL": "9.191,60€",
    "LAST_INTEREST": "808,41€",
    "TOTAL_CAPITAL": "10.000,01€",
  },
  "endValue": "10.000€",
  "interestAfterTax": "808,40€",
  "monthlyDuration": "84,00",
  "savingRate": "598,80€",
  "startCapital": "5.000€",
  "yearlyDuration": "7,00",
  "yearlyInterest": "1,50%",
}
`;

exports[`/calculators/savings > startValue > should return right results for monthly monthly 1`] = `
{
  "deposits": "17.862,46€",
  "diagramData": {
    "CAPITAL_LIST": [
      5412.46,
      5562.46,
      5712.46,
      5862.46,
      6012.46,
      6162.46,
      6312.46,
      6462.46,
      6612.46,
      6762.46,
      6912.46,
      7062.46,
      7212.46,
      7362.46,
      7512.46,
      7662.46,
      7812.46,
      7962.46,
      8112.46,
      8262.46,
      8412.46,
      8562.46,
      8712.46,
      8862.46,
      9012.46,
      9162.46,
      9312.46,
      9462.46,
      9612.46,
      9762.46,
      9912.46,
      10062.46,
      10212.46,
      10362.46,
      10512.46,
      10662.46,
      10812.46,
      10962.46,
      11112.46,
      11262.46,
      11412.46,
      11562.46,
      11712.46,
      11862.46,
      12012.46,
      12162.46,
      12312.46,
      12462.46,
      12612.46,
      12762.46,
      12912.46,
      13062.46,
      13212.46,
      13362.46,
      13512.46,
      13662.46,
      13812.46,
      13962.46,
      14112.46,
      14262.46,
      14412.46,
      14562.46,
      14712.46,
      14862.46,
      15012.46,
      15162.46,
      15312.46,
      15462.46,
      15612.46,
      15762.46,
      15912.46,
      16062.46,
      16212.46,
      16362.46,
      16512.46,
      16662.46,
      16812.46,
      16962.46,
      17112.46,
      17262.46,
      17412.46,
      17562.46,
      17712.46,
      17862.46,
    ],
    "INTEREST_LIST": [
      11.03,
      22.39,
      34.08,
      46.1,
      58.45,
      71.14,
      84.15,
      97.49,
      111.17,
      125.18,
      139.53,
      154.21,
      169.23,
      184.58,
      200.27,
      216.3,
      232.66,
      249.37,
      266.41,
      283.8,
      301.53,
      319.59,
      338.01,
      356.76,
      375.86,
      395.3,
      415.09,
      435.23,
      455.71,
      476.54,
      497.71,
      519.24,
      541.12,
      563.34,
      585.92,
      608.85,
      632.13,
      655.77,
      679.75,
      704.1,
      728.8,
      753.85,
      779.26,
      805.03,
      831.16,
      857.65,
      884.49,
      911.7,
      939.27,
      967.2,
      995.49,
      1024.15,
      1053.17,
      1082.55,
      1112.3,
      1142.42,
      1172.91,
      1203.76,
      1234.98,
      1266.57,
      1298.53,
      1330.86,
      1363.57,
      1396.64,
      1430.09,
      1463.91,
      1498.11,
      1532.68,
      1567.63,
      1602.96,
      1638.66,
      1674.75,
      1711.21,
      1748.05,
      1785.27,
      1822.88,
      1860.87,
      1899.24,
      1937.99,
      1977.13,
      2016.65,
      2056.56,
      2096.86,
      2137.55,
    ],
    "LAST_CAPITAL": "17.862,46€",
    "LAST_INTEREST": "2.137,55€",
    "TOTAL_CAPITAL": "20.000,01€",
  },
  "endValue": "20.000€",
  "interestAfterTax": "2.137,54€",
  "monthlyDuration": "84,00",
  "savingRate": "150€",
  "startCapital": "5.262,46€",
  "yearlyDuration": "7,00",
  "yearlyInterest": "3,00%",
}
`;

exports[`/calculators/savings > startValue > should return right results for monthly yearly 1`] = `
{
  "deposits": "18.068,87€",
  "diagramData": {
    "CAPITAL_LIST": [
      5618.87,
      5768.87,
      5918.87,
      6068.87,
      6218.87,
      6368.87,
      6518.87,
      6668.87,
      6818.87,
      6968.87,
      7118.87,
      7268.87,
      7418.87,
      7568.87,
      7718.87,
      7868.87,
      8018.87,
      8168.87,
      8318.87,
      8468.87,
      8618.87,
      8768.87,
      8918.87,
      9068.87,
      9218.87,
      9368.87,
      9518.87,
      9668.87,
      9818.87,
      9968.87,
      10118.87,
      10268.87,
      10418.87,
      10568.87,
      10718.87,
      10868.87,
      11018.87,
      11168.87,
      11318.87,
      11468.87,
      11618.87,
      11768.87,
      11918.87,
      12068.87,
      12218.87,
      12368.87,
      12518.87,
      12668.87,
      12818.87,
      12968.87,
      13118.87,
      13268.87,
      13418.87,
      13568.87,
      13718.87,
      13868.87,
      14018.87,
      14168.87,
      14318.87,
      14468.87,
      14618.87,
      14768.87,
      14918.87,
      15068.87,
      15218.87,
      15368.87,
      15518.87,
      15668.87,
      15818.87,
      15968.87,
      16118.87,
      16268.87,
      16418.87,
      16568.87,
      16718.87,
      16868.87,
      17018.87,
      17168.87,
      17318.87,
      17468.87,
      17618.87,
      17768.87,
      17918.87,
      18068.87,
    ],
    "INTEREST_LIST": [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      142.33,
      142.33,
      142.33,
      142.33,
      142.33,
      142.33,
      142.33,
      142.33,
      142.33,
      142.33,
      142.33,
      142.33,
      327.56,
      327.56,
      327.56,
      327.56,
      327.56,
      327.56,
      327.56,
      327.56,
      327.56,
      327.56,
      327.56,
      327.56,
      556.64,
      556.64,
      556.64,
      556.64,
      556.64,
      556.64,
      556.64,
      556.64,
      556.64,
      556.64,
      556.64,
      556.64,
      830.53,
      830.53,
      830.53,
      830.53,
      830.53,
      830.53,
      830.53,
      830.53,
      830.53,
      830.53,
      830.53,
      830.53,
      1150.24,
      1150.24,
      1150.24,
      1150.24,
      1150.24,
      1150.24,
      1150.24,
      1150.24,
      1150.24,
      1150.24,
      1150.24,
      1150.24,
      1516.76,
      1516.76,
      1516.76,
      1516.76,
      1516.76,
      1516.76,
      1516.76,
      1516.76,
      1516.76,
      1516.76,
      1516.76,
      1516.76,
      1931.13,
    ],
    "LAST_CAPITAL": "18.068,87€",
    "LAST_INTEREST": "1.931,13€",
    "TOTAL_CAPITAL": "20.000€",
  },
  "endValue": "20.000€",
  "interestAfterTax": "1.931,13€",
  "monthlyDuration": "84,00",
  "savingRate": "150€",
  "startCapital": "5.468,87€",
  "yearlyDuration": "7,00",
  "yearlyInterest": "3,00%",
}
`;

exports[`/calculators/savings > startValue > should return right results for yearly yearly 1`] = `
{
  "deposits": "17.310,89€",
  "diagramData": {
    "CAPITAL_LIST": [
      6510.89,
      6510.89,
      6510.89,
      6510.89,
      6510.89,
      6510.89,
      6510.89,
      6510.89,
      6510.89,
      6510.89,
      6510.89,
      6510.89,
      8310.89,
      8310.89,
      8310.89,
      8310.89,
      8310.89,
      8310.89,
      8310.89,
      8310.89,
      8310.89,
      8310.89,
      8310.89,
      8310.89,
      10110.89,
      10110.89,
      10110.89,
      10110.89,
      10110.89,
      10110.89,
      10110.89,
      10110.89,
      10110.89,
      10110.89,
      10110.89,
      10110.89,
      11910.89,
      11910.89,
      11910.89,
      11910.89,
      11910.89,
      11910.89,
      11910.89,
      11910.89,
      11910.89,
      11910.89,
      11910.89,
      11910.89,
      13710.89,
      13710.89,
      13710.89,
      13710.89,
      13710.89,
      13710.89,
      13710.89,
      13710.89,
      13710.89,
      13710.89,
      13710.89,
      13710.89,
      15510.89,
      15510.89,
      15510.89,
      15510.89,
      15510.89,
      15510.89,
      15510.89,
      15510.89,
      15510.89,
      15510.89,
      15510.89,
      15510.89,
      17310.89,
      17310.89,
      17310.89,
      17310.89,
      17310.89,
      17310.89,
      17310.89,
      17310.89,
      17310.89,
      17310.89,
      17310.89,
      17310.89,
    ],
    "INTEREST_LIST": [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      195.33,
      195.33,
      195.33,
      195.33,
      195.33,
      195.33,
      195.33,
      195.33,
      195.33,
      195.33,
      195.33,
      195.33,
      450.51,
      450.51,
      450.51,
      450.51,
      450.51,
      450.51,
      450.51,
      450.51,
      450.51,
      450.51,
      450.51,
      450.51,
      767.36,
      767.36,
      767.36,
      767.36,
      767.36,
      767.36,
      767.36,
      767.36,
      767.36,
      767.36,
      767.36,
      767.36,
      1147.7,
      1147.7,
      1147.7,
      1147.7,
      1147.7,
      1147.7,
      1147.7,
      1147.7,
      1147.7,
      1147.7,
      1147.7,
      1147.7,
      1593.46,
      1593.46,
      1593.46,
      1593.46,
      1593.46,
      1593.46,
      1593.46,
      1593.46,
      1593.46,
      1593.46,
      1593.46,
      1593.46,
      2106.59,
      2106.59,
      2106.59,
      2106.59,
      2106.59,
      2106.59,
      2106.59,
      2106.59,
      2106.59,
      2106.59,
      2106.59,
      2106.59,
      2689.12,
    ],
    "LAST_CAPITAL": "17.310,89€",
    "LAST_INTEREST": "2.689,12€",
    "TOTAL_CAPITAL": "20.000,01€",
  },
  "endValue": "20.000€",
  "interestAfterTax": "2.689,11€",
  "monthlyDuration": "84,00",
  "savingRate": "1.800€",
  "startCapital": "4.710,89€",
  "yearlyDuration": "7,00",
  "yearlyInterest": "3,00%",
}
`;

exports[`/calculators/savings > yearlyInterest > should return right results for monthly monthly 1`] = `
{
  "deposits": "23.000€",
  "diagramData": {
    "CAPITAL_LIST": [
      5150,
      5300,
      5450,
      5600,
      5750,
      5900,
      6050,
      6200,
      6350,
      6500,
      6650,
      6800,
      6950,
      7100,
      7250,
      7400,
      7550,
      7700,
      7850,
      8000,
      8150,
      8300,
      8450,
      8600,
      8750,
      8900,
      9050,
      9200,
      9350,
      9500,
      9650,
      9800,
      9950,
      10100,
      10250,
      10400,
      10550,
      10700,
      10850,
      11000,
      11150,
      11300,
      11450,
      11600,
      11750,
      11900,
      12050,
      12200,
      12350,
      12500,
      12650,
      12800,
      12950,
      13100,
      13250,
      13400,
      13550,
      13700,
      13850,
      14000,
      14150,
      14300,
      14450,
      14600,
      14750,
      14900,
      15050,
      15200,
      15350,
      15500,
      15650,
      15800,
      15950,
      16100,
      16250,
      16400,
      16550,
      16700,
      16850,
      17000,
      17150,
      17300,
      17450,
      17600,
      17750,
      17900,
      18050,
      18200,
      18350,
      18500,
      18650,
      18800,
      18950,
      19100,
      19250,
      19400,
      19550,
      19700,
      19850,
      20000,
      20150,
      20300,
      20450,
      20600,
      20750,
      20900,
      21050,
      21200,
      21350,
      21500,
      21650,
      21800,
      21950,
      22100,
      22250,
      22400,
      22550,
      22700,
      22850,
      23000,
    ],
    "INTEREST_LIST": [
      18.02,
      36.62,
      55.81,
      75.6,
      95.98,
      116.95,
      138.52,
      160.7,
      183.47,
      206.85,
      230.84,
      255.43,
      280.64,
      306.46,
      332.89,
      359.94,
      387.61,
      415.91,
      444.82,
      474.36,
      504.53,
      535.33,
      566.76,
      598.83,
      631.53,
      664.88,
      698.86,
      733.49,
      768.76,
      804.68,
      841.26,
      878.48,
      916.36,
      954.9,
      994.1,
      1033.95,
      1074.48,
      1115.67,
      1157.52,
      1200.05,
      1243.25,
      1287.13,
      1331.69,
      1376.93,
      1422.85,
      1469.45,
      1516.74,
      1564.73,
      1613.4,
      1662.77,
      1712.84,
      1763.61,
      1815.08,
      1867.26,
      1920.14,
      1973.73,
      2028.04,
      2083.06,
      2138.79,
      2195.25,
      2252.43,
      2310.33,
      2368.96,
      2428.32,
      2488.41,
      2549.24,
      2610.8,
      2673.11,
      2736.16,
      2799.95,
      2864.49,
      2929.78,
      2995.83,
      3062.63,
      3130.19,
      3198.51,
      3267.59,
      3337.44,
      3408.06,
      3479.45,
      3551.61,
      3624.56,
      3698.28,
      3772.78,
      3848.07,
      3924.15,
      4001.02,
      4078.68,
      4157.14,
      4236.4,
      4316.46,
      4397.32,
      4479,
      4561.48,
      4644.78,
      4728.89,
      4813.82,
      4899.57,
      4986.15,
      5073.56,
      5161.79,
      5250.86,
      5340.77,
      5431.51,
      5523.1,
      5615.53,
      5708.81,
      5802.94,
      5897.93,
      5993.77,
      6090.47,
      6188.04,
      6286.47,
      6385.77,
      6485.94,
      6586.99,
      6688.92,
      6791.72,
      6895.41,
      6999.99,
    ],
    "LAST_CAPITAL": "23.000€",
    "LAST_INTEREST": "6.999,99€",
    "TOTAL_CAPITAL": "29.999,99€",
  },
  "endValue": "30.000€",
  "interestAfterTax": "7.000€",
  "monthlyDuration": "120,00",
  "savingRate": "150€",
  "startCapital": "5.000€",
  "yearlyDuration": "10,00",
  "yearlyInterest": "5,15%",
}
`;

exports[`/calculators/savings > yearlyInterest > should return right results for monthly yearly 1`] = `
{
  "deposits": "23.000€",
  "diagramData": {
    "CAPITAL_LIST": [
      5150,
      5300,
      5450,
      5600,
      5750,
      5900,
      6050,
      6200,
      6350,
      6500,
      6650,
      6800,
      6950,
      7100,
      7250,
      7400,
      7550,
      7700,
      7850,
      8000,
      8150,
      8300,
      8450,
      8600,
      8750,
      8900,
      9050,
      9200,
      9350,
      9500,
      9650,
      9800,
      9950,
      10100,
      10250,
      10400,
      10550,
      10700,
      10850,
      11000,
      11150,
      11300,
      11450,
      11600,
      11750,
      11900,
      12050,
      12200,
      12350,
      12500,
      12650,
      12800,
      12950,
      13100,
      13250,
      13400,
      13550,
      13700,
      13850,
      14000,
      14150,
      14300,
      14450,
      14600,
      14750,
      14900,
      15050,
      15200,
      15350,
      15500,
      15650,
      15800,
      15950,
      16100,
      16250,
      16400,
      16550,
      16700,
      16850,
      17000,
      17150,
      17300,
      17450,
      17600,
      17750,
      17900,
      18050,
      18200,
      18350,
      18500,
      18650,
      18800,
      18950,
      19100,
      19250,
      19400,
      19550,
      19700,
      19850,
      20000,
      20150,
      20300,
      20450,
      20600,
      20750,
      20900,
      21050,
      21200,
      21350,
      21500,
      21650,
      21800,
      21950,
      22100,
      22250,
      22400,
      22550,
      22700,
      22850,
      23000,
    ],
    "INTEREST_LIST": [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      255.6,
      255.6,
      255.6,
      255.6,
      255.6,
      255.6,
      255.6,
      255.6,
      255.6,
      255.6,
      255.6,
      255.6,
      599.13,
      599.13,
      599.13,
      599.13,
      599.13,
      599.13,
      599.13,
      599.13,
      599.13,
      599.13,
      599.13,
      599.13,
      1034.36,
      1034.36,
      1034.36,
      1034.36,
      1034.36,
      1034.36,
      1034.36,
      1034.36,
      1034.36,
      1034.36,
      1034.36,
      1034.36,
      1565.2,
      1565.2,
      1565.2,
      1565.2,
      1565.2,
      1565.2,
      1565.2,
      1565.2,
      1565.2,
      1565.2,
      1565.2,
      1565.2,
      2195.76,
      2195.76,
      2195.76,
      2195.76,
      2195.76,
      2195.76,
      2195.76,
      2195.76,
      2195.76,
      2195.76,
      2195.76,
      2195.76,
      2930.29,
      2930.29,
      2930.29,
      2930.29,
      2930.29,
      2930.29,
      2930.29,
      2930.29,
      2930.29,
      2930.29,
      2930.29,
      2930.29,
      3773.24,
      3773.24,
      3773.24,
      3773.24,
      3773.24,
      3773.24,
      3773.24,
      3773.24,
      3773.24,
      3773.24,
      3773.24,
      3773.24,
      4729.25,
      4729.25,
      4729.25,
      4729.25,
      4729.25,
      4729.25,
      4729.25,
      4729.25,
      4729.25,
      4729.25,
      4729.25,
      4729.25,
      5803.16,
      5803.16,
      5803.16,
      5803.16,
      5803.16,
      5803.16,
      5803.16,
      5803.16,
      5803.16,
      5803.16,
      5803.16,
      5803.16,
      7000,
    ],
    "LAST_CAPITAL": "23.000€",
    "LAST_INTEREST": "7.000€",
    "TOTAL_CAPITAL": "30.000€",
  },
  "endValue": "30.000€",
  "interestAfterTax": "7.000€",
  "monthlyDuration": "120,00",
  "savingRate": "150€",
  "startCapital": "5.000€",
  "yearlyDuration": "10,00",
  "yearlyInterest": "4,28%",
}
`;

exports[`/calculators/savings > yearlyInterest > should return right results for yearly yearly 1`] = `
{
  "deposits": "23.000€",
  "diagramData": {
    "CAPITAL_LIST": [
      6800,
      6800,
      6800,
      6800,
      6800,
      6800,
      6800,
      6800,
      6800,
      6800,
      6800,
      6800,
      8600,
      8600,
      8600,
      8600,
      8600,
      8600,
      8600,
      8600,
      8600,
      8600,
      8600,
      8600,
      10400,
      10400,
      10400,
      10400,
      10400,
      10400,
      10400,
      10400,
      10400,
      10400,
      10400,
      10400,
      12200,
      12200,
      12200,
      12200,
      12200,
      12200,
      12200,
      12200,
      12200,
      12200,
      12200,
      12200,
      14000,
      14000,
      14000,
      14000,
      14000,
      14000,
      14000,
      14000,
      14000,
      14000,
      14000,
      14000,
      15800,
      15800,
      15800,
      15800,
      15800,
      15800,
      15800,
      15800,
      15800,
      15800,
      15800,
      15800,
      17600,
      17600,
      17600,
      17600,
      17600,
      17600,
      17600,
      17600,
      17600,
      17600,
      17600,
      17600,
      19400,
      19400,
      19400,
      19400,
      19400,
      19400,
      19400,
      19400,
      19400,
      19400,
      19400,
      19400,
      21200,
      21200,
      21200,
      21200,
      21200,
      21200,
      21200,
      21200,
      21200,
      21200,
      21200,
      21200,
      23000,
      23000,
      23000,
      23000,
      23000,
      23000,
      23000,
      23000,
      23000,
      23000,
      23000,
      23000,
    ],
    "INTEREST_LIST": [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      276.25,
      276.25,
      276.25,
      276.25,
      276.25,
      276.25,
      276.25,
      276.25,
      276.25,
      276.25,
      276.25,
      276.25,
      636.84,
      636.84,
      636.84,
      636.84,
      636.84,
      636.84,
      636.84,
      636.84,
      636.84,
      636.84,
      636.84,
      636.84,
      1085.21,
      1085.21,
      1085.21,
      1085.21,
      1085.21,
      1085.21,
      1085.21,
      1085.21,
      1085.21,
      1085.21,
      1085.21,
      1085.21,
      1624.92,
      1624.92,
      1624.92,
      1624.92,
      1624.92,
      1624.92,
      1624.92,
      1624.92,
      1624.92,
      1624.92,
      1624.92,
      1624.92,
      2259.68,
      2259.68,
      2259.68,
      2259.68,
      2259.68,
      2259.68,
      2259.68,
      2259.68,
      2259.68,
      2259.68,
      2259.68,
      2259.68,
      2993.35,
      2993.35,
      2993.35,
      2993.35,
      2993.35,
      2993.35,
      2993.35,
      2993.35,
      2993.35,
      2993.35,
      2993.35,
      2993.35,
      3829.95,
      3829.95,
      3829.95,
      3829.95,
      3829.95,
      3829.95,
      3829.95,
      3829.95,
      3829.95,
      3829.95,
      3829.95,
      3829.95,
      4773.66,
      4773.66,
      4773.66,
      4773.66,
      4773.66,
      4773.66,
      4773.66,
      4773.66,
      4773.66,
      4773.66,
      4773.66,
      4773.66,
      5828.84,
      5828.84,
      5828.84,
      5828.84,
      5828.84,
      5828.84,
      5828.84,
      5828.84,
      5828.84,
      5828.84,
      5828.84,
      5828.84,
      7000,
    ],
    "LAST_CAPITAL": "23.000€",
    "LAST_INTEREST": "7.000€",
    "TOTAL_CAPITAL": "30.000€",
  },
  "endValue": "30.000€",
  "interestAfterTax": "7.000€",
  "monthlyDuration": "120,00",
  "savingRate": "1.800€",
  "startCapital": "5.000€",
  "yearlyDuration": "10,00",
  "yearlyInterest": "5,24%",
}
`;
